--- a/index.html
+++ b/index.html
@@ -290,21 +290,21 @@
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
-        <img src="C:\Users\prade\OneDrive\Desktop\nandhakumar\python game.jpg" alt="E-Cart">
+        <img src="python game.jpg" alt="E-Cart">
         <div class="content">
           <h3> GAME using python </h3>
           <a href="#">View Project</a>
         </div>
       </div>
       <div class="project-card">
-        <img src="C:\Users\prade\OneDrive\Desktop\nandhakumar\trade.jpg" alt="Security">
+        <img src="trade.jpg" alt="Security">
         <div class="content">
           <h3>Trading app</h3>
           <a href="#">View Project</a>
         </div>
       </div>
       <div class="project-card">
-        <img src="C:\Users\prade\OneDrive\Desktop\nandhakumar\business image.jpg" alt="Chatbot">
+        <img src="business image.jpg" alt="Chatbot">
         <div class="content">
           <h3>Business website</h3>
           <a href="#">View Project</a>
@@ -392,4 +392,5 @@
   </script>
 
 </body>
+
 </html>
